Give up on buttons taking up whole line, to avoid having to scroll on mobile to see all the flags

--- a/src/App.css
+++ b/src/App.css
@@ -66,9 +66,3 @@ button {
   border: 1px solid black;
   align-self: center;
 }
-
-@media only screen and (max-width: 720px) {
-  .option-button {
-    width: 60vw;
-  }
-}
